<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_map"
        android:enabled="true" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_star"
        android:title="@string/nav_favorites"
        android:enabled="true" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/nav_schedule"
        android:enabled="true" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report"
        android:title="@string/nav_report"
        android:enabled="true" />

</menu>